--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </p>
     </footer>
 
-    <audio id="background-audio" loop>
+    <audio id="background-audio" autoplay loop>
         <source src="assets/main_theme_music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
